--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: dotnet-tests-report
-      run: echo "${{ github.refs }}"
+      run: echo "${{ github.ref }}"
