--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -11,11 +11,10 @@ jobs:
       if: ${{ github.ref_type == 'branch' }}
       name: Checkout branch
       uses: actions/checkout@v3
-      with:
-        ref: ${{ github.ref }}
     -
       name: Create PR
       uses: peter-evans/create-pull-request@v4
       with:
         title: ${{ github.ref_name }}
         body: "Merging branch to create ${{ github.ref_name }}"
+        branch: ${{ github.ref_name }}
