--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -13,9 +13,10 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Create PR
-      uses: peter-evans/create-pull-request@v4
+      uses: thomaseizinger/create-pull-request@master
       with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        head: ${{ github.ref }}
+        base: main
         title: ${{ github.ref_name }}
         body: "Merging branch to create ${{ github.ref_name }}"
-        base: main
-        branch: ${{ github.ref_name }}
