--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -19,4 +19,4 @@ jobs:
         head: ${{ github.ref }}
         base: main
         title: ${{ github.ref_name }}
-        body: "Merging branch to create ${{ github.ref_name }}"
+        body: "Merging branch to create ${{ github.ref_name }}."
