--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Create PR
-      uses: thomaseizinger/create-pull-request@v1.2.2
+      uses: thomaseizinger/create-pull-request@1.2.2
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         head: ${{ github.ref }}
