--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -13,10 +13,9 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Create PR
-      uses: thomaseizinger/create-pull-request@1.2.2
+      uses: repo-sync/pull-request@v2
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        head: ${{ github.ref }}
-        base: main
-        title: ${{ github.ref_name }}
-        body: "Merging branch to create ${{ github.ref_name }}."
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        destination_branch: main
+        pr_title: ${{ github.ref_name }}
+        pr_body: "Merging branch to create ${{ github.ref_name }}."
