--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Create Pull Request
-      uses: repo-sync/pull-request@v2
+      uses: bfren/pull-request@v2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         destination_branch: main
