--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -1,4 +1,4 @@
-name: Auto PR
+name: Auto Pull Request
 
 on:
   create
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     -
-      if: ${{ github.ref_type == 'branch' }}
+      if: github.ref_type == "branch"
       name: Checkout Branch ${{ github.ref_name }}
       uses: actions/checkout@v3
     -
