--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -15,3 +15,5 @@ jobs:
     -
       name: Create Release
       uses: softprops/action-gh-release@v1
+      with:
+        tag_name: ${{ github.ref_name }}
