--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,11 +1,11 @@
-name: auro-release
+name: auto-release
 
 on:
   pull_request:
     types: [closed]
 
 jobs:
-  create-pr:
+  create-release:
     runs-on: ubuntu-latest
     steps:
     -
@@ -13,5 +13,12 @@ jobs:
       name: Checkout
       uses: actions/checkout@v3
     -
-      name: Create Release
+      name: Get Pull Request name
+      run: echo "PR_NAME='${{ github.event.pull_request.title }}'" >> $GITHUB_ENV
+      shell: bash
+    -
+      name: Create Release ${{ env.PR_NAME }}
       uses: softprops/action-gh-release@v1
+      with:
+        name: ${{ env.PR_NAME }}
+        tag_name: ${{ env.PR_NAME }}
