--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
     -
       name: Get Pull Request name
-      run: echo "PR_NAME='${{ github.event.pull_request.title }}'" >> $GITHUB_ENV
+      run: echo "PR_NAME=$(echo '${{ github.event.pull_request.title }}')" >> $GITHUB_ENV
       shell: bash
     -
       name: Create Release ${{ env.PR_NAME }}
