--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -6,19 +6,17 @@ on:
 
 jobs:
   create-release:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
     -
-      if: github.event.pull_request.merged == true
-      name: Checkout
-      uses: actions/checkout@v3
-    -
-      name: Get Pull Request name
-      run: echo "PR_NAME=$(echo '${{ github.event.pull_request.title }}')" >> $GITHUB_ENV
+      name: Get Pull Request Title
+      run: echo "PR_TITLE=${{ github.event.pull_request.title }}" >> $GITHUB_ENV
       shell: bash
     -
-      name: Create Release ${{ env.PR_NAME }}
-      uses: softprops/action-gh-release@v1
+      name: Create Release ${{ env.PR_TITLE }}
+      uses: bfren/action-gh-release@v1
       with:
-        name: ${{ env.PR_NAME }}
-        tag_name: ${{ env.PR_NAME }}
+        token: ${{ secrets.PAT }}
+        name: ${{ env.PR_TITLE }}
+        tag_name: ${{ env.PR_TITLE }}
